Remove jetpack multiplatform dependency and add Kotter dependency to start development of TUI
Also bump Gradle version because Gradle 8.9 is deprecated