@@ -1,50 +1,29 @@
-import org.jetbrains.compose.desktop.application.dsl.TargetFormat
-
 plugins {
-    alias(libs.plugins.kotlinMultiplatform)
-    alias(libs.plugins.composeMultiplatform)
-    alias(libs.plugins.composeCompiler)
-    id("org.jetbrains.kotlinx.benchmark") version "0.4.13"
+    kotlin("jvm") version "2.4.0"
+    application
+}
+
+repositories {
+    mavenCentral()
 }
 
 kotlin {
-    jvm()
-
     sourceSets {
-
-        commonMain {
+        main {
             kotlin.srcDir("src")
-
-            dependencies {
-                implementation(compose.runtime)
-                implementation(compose.foundation)
-                implementation(compose.material)
-                implementation(compose.ui)
-                implementation(compose.components.resources)
-                implementation(compose.components.uiToolingPreview)
-                implementation(libs.androidx.lifecycle.viewmodel)
-                implementation(libs.androidx.lifecycle.runtime.compose)
-                implementation("org.jetbrains.kotlinx:kotlinx-benchmark-runtime:0.4.13")
-            }
-        }
-
-        val jvmMain by getting {
-            dependencies {
-                implementation(compose.desktop.currentOs)
-                implementation(libs.kotlinx.coroutines.swing)
-            }
         }
     }
 }
 
-compose.desktop {
-    application {
-        mainClass = "abalone.MainKt"
+dependencies {
+    implementation("com.varabyte.kotter:kotter:1.3.0")
+    testImplementation("com.varabyte.kotterx:kotter-test-support:1.3.0")
+}
 
-        nativeDistributions {
-            targetFormats(TargetFormat.Dmg, TargetFormat.Msi, TargetFormat.Deb)
-            packageName = "abalone"
-            packageVersion = "1.0.0"
-        }
-    }
+application {
+    applicationDefaultJvmArgs = listOf(
+        "-XX:+IgnoreUnrecognizedVMOptions",
+        "--enable-native-access=ALL-UNNAMED",
+    )
+    mainClass.set("MainKt")
 }
